# BoomCourseManager---MIVENI-01

./: .gitignore  AVLNode.cpp  AVLNode.h  AVLTree.cpp  AVLTree.h  AVL_main.cpp  Auxiliaries.cpp  Auxiliaries.h  Avl.cpp  Avl.h  BoomExceptions.cpp  BoomExceptions.h  CMakeLists.txt  Course.cpp  Course.h  CourseNode.cpp  CourseNode.h  Courses.h  CoursesManager.cpp  CoursesManager.h  Library.cpp  List.cpp  List.h  Node.cpp  Node.h  README.md  in1.txt  library.cpp  list.h  main.cpp  main1.cpp  myTesy.txt  out1.txt
